:hammer: Fixed activity feed item's clickable area being too large.

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -47,7 +47,7 @@
     }
 
     &__link {
-      flex-grow: 1;
+      margin-right: auto;
       color: var(--colour-foreground);
     }
 
